# AGEA

./: CMakeLists.txt
ext/include/: expected.hpp
ext/include/SDL/: SDL_config.h
include/: sdl.h
include/common/range/: view.h
include/functional/: functional.h
include/input/: event.h
include/math/: integration.h  vector.h
include/meta/: detected.h
include/model/: entity.h  world.h
include/physics/: body.h  time.h
include/view/sdl/: sdl.h
src/: main.cpp
test/: CMakeLists.txt
test/src/: main.cpp
test/src/math/: vector.cpp
test/src/physics/: body.cpp
